# morfo

./: Cargo.toml  README.md  build.rs  check_version.sh  config.toml  install.sh
.circleci/: config.yml
.out/: main
examples/custom_build/: main.c  morfo.toml
examples/hello_world/: main.c
examples/input_scanf/: main.c
src/: act.rs  config.rs  error.rs  lib.rs  main.rs  utils.rs
src/act/: builder.rs  dirinfo.rs
