[package]
name = "morfo"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE"
description = "This is an automatic build tool for your C/C++ projects that analyses your code and executes it without having to write any external code."
homepage = "https://cybercoder-naj.github.io/morfo"
documentation = "https://docs.rs/morfo"
repository = "https://github.com/cybercoder-naj/morfo"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
